--- a/conf/tmpl.html
+++ b/conf/tmpl.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>Yet Another React Starter Kit</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Time Flies</title>
     {% if (o.htmlWebpackPlugin.options.production) { %}
     <link rel="stylesheet" href="app.{%=o.webpack.hash%}.css" media="all">
     {% } %}
